--- a/20171206.md
+++ b/20171206.md
@@ -38,14 +38,12 @@ https://recruit-tech.co.jp/company/access.html
 | 時間 | タイトル |
 |:------------ |:-------------- |
 | 19:00 - 19:05 | ** 諸説明 ** |
-| 19:05 - 19:15 | ** ストリームデータ処理の動向 ** <br> 6月に米サンノゼで開催された「DataWorks Summit 2017」で取材した内容を中心に、データストリーミングの最新トレンドについて紹介します。<br> *五味明子, フリーランスライター* |
-| 19:15 - 19:30 |  ** Modern stream processing by Spark Structured Streaming ** <br> 昨今、ストリーム処理は以前言われてきたバッチ処理と対比される状況を越え、統合データ処理として語られるようになってきています。OSSによるストリーム処理の流れを振り返り、最近の1つの具体例として統合されたデータ処理を簡易に実現可能なSpark Structured Streamingについて紹介します。<br> *木村宗太郎, ドワンゴ* |
-| 19:30 - 19:45 | ** Kafka Summit NYCに見るストリーミングデータETLの話（仮）** <br> 5月に米ニューヨークで開催された「Kafka Summit NYC」をベースに、KafkaをコアにしたストリーミングデータのETLの動向などについて話します。<br> *森谷大輔, ヤフー株式会社* |
-| 19:45 - 20:05 | ** 大規模MQTTメッセージを支える技術 ** <br> 物流系のIoTなシステムを設計/構築する中で、特にMQTTブローカーについて、考慮しなくちゃいけなかったことやハマったポイント、プロダクト/サービスの選定経緯についてお話します。 <br> *須田桂伍, Future Architect* |
+| 19:05 - 19:15 | ** AWS reInvent 2017 データ関連サービスについて ** <br> <br> *五味明子, フリーランスライター* |
+| 19:15 - 19:30 |  ** Druid + Superset ** <br> <br> *サイバーエージェント, inken* |
+| 19:30 - 19:45 | ** Kylinについて** <br> <br> *NEC 新郷* |
+| 19:45 - 20:05 | ** Tableau Hyper<br> *TBD, TBD* |
 | 20:05 - 20:10 | ** 休憩 ** |
-| 20:10 - 20:20 | ** Apache NiFi, 流れるデータにもスキーマを ** <br> 処理性能にも大きく貢献する、Apache NiFi 1.2.0から追加された、スキーマやRecord Reader/Writerといった機能について掘り下げて紹介します。 <br> *河村康爾, Hortonworks*
-| 20:20 - 20:40 | ** NiFi素人が苦労した物語 ** <br> Webサービスが連携していく中で、独自インターフェースとのやり取りや、しがらみを吸収するのに採用した内容について事例紹介させていただきます。 <br> *一ノ瀨 淳, 田草川 梢, SoftBank* |
-| 20:40 - 21:00 |  ** ビッグデータエンジニア向けのIoT入門 〜デバイス、無線からクラウドまで〜 ** <br> IoTならではのアプリケーションデザインのお話をします。例えば、セルラー通信でのデータ収集はネットワークの不安定性を考慮に入れて設計する必要がありますが、デバイス側のバッファが小さく、再送処理もままならないようなケースも多数あります。こういった「あるある」なユースケースに沿ったアプリケーションデザインを紹介していきます。 <br> *今井雄太, SORACOM* |
+
 
 
 # 資料
